# genjishimada-api

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.dev.yml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: deploy.yml  dev-deploy.yml  prod-deploy.yml
di/: __init__.py  autocomplete.py  base.py  change_requests.py  community.py  completions.py  image_storage.py  jobs.py  lootbox.py  lust.py  maps.py  newsfeed.py  playtests.py  rank_card.py  users.py
html/: index.html
middleware/: auth.py
migrations/: 0001_init.sql  0002_lootbox_contents.sql
routes/: __init__.py  change_requests.py  community.py  completions.py  jobs.py  lootbox.py  newsfeed.py  rank_card.py  tags.py  users.py  utilities.py
routes/maps/: __init__.py  base.py  playtest.py
seeds/: 0001-init_seed.sql
tests/: conftest.py  test_thing.py
tests/controllers/: test_lootbox.py  test_maps.py  test_rank_card.py  test_users.py
utilities/: errors.py  jobs.py  playtest_plot.py  shared_queries.py
